test/fail_compilation/test20946.d
class C1 {
    UndefinedType a;
}
typeof(func) f;
void func(C1 ) { }
